Good chunk of the auth is done...